@@ -1,6 +1,6 @@
 /* input_file.c - Deal with Input Files -
    Copyright 1987, 1990, 1991, 1992, 1993, 1994, 1995, 1999, 2000, 2001,
-   2002, 2003, 2005, 2006, 2007, 2009, 2012
+   2002, 2003, 2005, 2006, 2007, 2009
    Free Software Foundation, Inc.
 
    This file is part of GAS, the GNU Assembler.
@@ -28,6 +28,8 @@
 #include "as.h"
 #include "input-file.h"
 #include "safe-ctype.h"
+
+static int input_file_get (char *, int);
 
 /* This variable is non-zero if the file currently being read should be
    preprocessed by app.  It is zero if the file can be read straight in.  */
@@ -69,7 +71,7 @@ input_file_end (void)
 }
 
 /* Return BUFFER_SIZE.  */
-size_t
+unsigned int
 input_file_buffer_size (void)
 {
   return (BUFFER_SIZE);
@@ -211,17 +213,20 @@ input_file_close (void)
 
 /* This function is passed to do_scrub_chars.  */
 
-static size_t
-input_file_get (char *buf, size_t buflen)
+static int
+input_file_get (char *buf, int buflen)
 {
-  size_t size;
+  int size;
 
   if (feof (f_in))
     return 0;
-
+  
   size = fread (buf, sizeof (char), buflen, f_in);
-  if (ferror (f_in))
-    as_bad (_("can't read from %s: %s"), file_name, xstrerror (errno));
+  if (size < 0)
+    {
+      as_bad (_("can't read from %s: %s"), file_name, xstrerror (errno));
+      size = 0;
+    }
   return size;
 }
 
@@ -231,7 +236,7 @@ char *
 input_file_give_next_buffer (char *where /* Where to place 1st character of new buffer.  */)
 {
   char *return_value;		/* -> Last char of what we read, + 1.  */
-  size_t size;
+  int size;
 
   if (f_in == (FILE *) 0)
     return 0;
@@ -242,8 +247,18 @@ input_file_give_next_buffer (char *where /* Where to place 1st character of new 
   if (preprocess)
     size = do_scrub_chars (input_file_get, where, BUFFER_SIZE);
   else
-    size = input_file_get (where, BUFFER_SIZE);
+    {
+      if (feof (f_in))
+	size = 0;
+      else
+	size = fread (where, sizeof (char), BUFFER_SIZE, f_in);
+    }
 
+  if (size < 0)
+    {
+      as_bad (_("can't read from %s: %s"), file_name, xstrerror (errno));
+      size = 0;
+    }
   if (size)
     return_value = where + size;
   else
